# supreme-waffle-engine

./: CMakeLists.txt  build.md  loc.sh
.zed/: debug.json  tasks.json
common/: CMakeLists.txt
common/headers/common/: errors.h  memory_arena.h  typedefs.h
common/src/: memory_arena.c
engine/: CMakeLists.txt
engine/headers/engine/: font.h  game_loop.h  memory_arena.h  memory_pool.h  resource_indexers.h  scene.h  static_resources.h  text_rendering.h  typedefs.h
engine/headers/engine/platform/: measure_time.h  window_data.h
engine/src/: font.c  measure_time.c  memory_arena.c  resource_indexer.c  scene.c  static_resources.c  static_resources_constants.c  text_rendering.c
engine/src/platform/graphics/: graphics_glad.c
engine/src/platform/measure_time/: measure_time_linux.c  measure_time_windows.c
engine/src/platform/window/: window_glfw.c
engine/src/shaders/: render_text.frag  render_text.vert
game/: CMakeLists.txt
game/src/: game_loop.c  main.c
platform/: CMakeLists.txt
platform/headers/export/platform/: crossplatform_alloca.h  file_io.h  graphics.h  input.h  measure_time.h  memory_allocations.h  shader.h  window_data.h
platform/libs/src/cglm/: CMakeLists.txt
platform/libs/src/glad/: glad.c
platform/src/collect_input/: collect_input_glfw.c
platform/src/file_io/: file_io_libc.c  file_io_linux.c  file_io_windows.c
platform/src/game_loop/: game_loop_glfw.c
platform/src/graphics/: graphics_glad.c
platform/src/input/: input_glfw.c
platform/src/measure_time/: measure_time.c  measure_time_linux.c  measure_time_windows.c
platform/src/memory/: memory_linux.c  memory_windows.c
platform/src/shader/: shader_glad.c
platform/src/window/: window_glfw.c
playground/: CMakeLists.txt
playground/headers/playground/: game_loop.h  input_functions.h
playground/src/: game_loop.c  input_functions.c  main.c
primitives/: CMakeLists.txt
primitives/headers/primitives/: errors.h  range.h  string_utils.h  typedefs.h
primitives/src/: string_utils.c
tests/: CMakeLists.txt
tests/cmocka/: compile_commands.json
tests/headers/tests/: memory_arena_tests.h  resource_indexer_tests.h  setup_and_teardown_functions.h  test_memory_struct.h
tests/src/: main.c  memory_arena_tests.c  resource_indexer_tests.c  setup_and_teardown_functions.c
winbuild/: CMakeCache.txt
